--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 <!-- portfolio -->
     <div class="site-section" id="portfolio-section">
       <div class="container">
-        <h2 class="title mb-3">Recent Works</h2>
+        <h2 class="title mb-3">Portfolio</h2>
       </br>
 
         <!-- Waymore -->
