--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <h3>Great fashion should never go to waste, but what if your fashion was made from waste?</h3>
             <p class="mb-4">
               Waymore is a sustainable clothing initiative that makes clothing by recycling waste plastic bottles. We wanted to address the lack of an easy, responsible call to action for individuals to opt-in and contribute to fighting plastic pollution.
-              We’ve recycled over 1.3 million waste plastic bottles locally in India and 25 metrics tonnes of waste cotton.
+              We’ve recycled over 1.3 million waste plastic bottles and 25 metric tonnes of cotton waste.
               </p>
             <p class="mb-4"><a href="https://waymore.world/" target="_blank" class="readmore">Visit website</a></p>
             <div class="testimonial bg-white h-100">
